--- a/assets/html/airtime_funding.html
+++ b/assets/html/airtime_funding.html
@@ -17,7 +17,7 @@
                     <span class="name">Welcome</span>
                 </div>
                 <span class="toggle">
-                    <span class="change">&#10006</span>
+                    <span class="change">&#10006;</span>
                 </span>
             </div>
         </header>
