--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <p>Enter same password as before</p><br>
                         </div>
                         
-                        <input type="checkbox" name="" required><a href="/assets/html/terms.html" id="terms"> I Agree to the terms and conditions</a><br><br>
+                        <input type="checkbox" name="" required><a href="./assets/html/terms.html" id="terms"> I Agree to the terms and conditions</a><br><br>
                         <div class="btn">
                             <button class="btn">Sign Up</button>
                         </div>
